syntax = "proto3";
package main;

option go_package = "./";

message Like {
  reactionUUID twitId = 1;
  int32 likeCounter = 2;
}

message Retwit {
  reactionUUID twitId = 1;
  int32 retwitCounter = 2;
}

message ResponseReaction {
  string value = 1;
}

message reactionUUID {
  string value = 1;
}

service LikeService {
  rpc getTwitLikes(reactionUUID) returns (Like);
  rpc likeTwit(reactionUUID) returns (ResponseReaction);
  rpc unlikeTwit(reactionUUID) returns (ResponseReaction);
}

service RetwitService {
  rpc getTwitRetwits(reactionUUID) returns (Retwit);
  rpc retwitTwit(reactionUUID) returns (ResponseReaction);
  rpc unretwitTwit(reactionUUID) returns (ResponseReaction);
}